vpc1/nat-gateway.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: This template creates a nat gateway in each public subnet

Parameters:
  EnvironmentName:
    Description: The name of the vpc stack that exports values
    Type: String

Resources:
# Allocate Elastic IP Address (EIP 1)
  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: VPC
      Tags:
        - Key: Name
          Value: EIP 1

# Allocate Elastic IP Address (EIP 2)
  NatGateway2EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: VPC
      Tags:
        - Key: Name
          Value: EIP 2

# Create a NAT Gateway 1 in Public Subnet 1
  NatGatewayPublicSubnet1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId:
        Fn::ImportValue: !Sub ${EnvironmentName}-PublicSubnet1
      Tags:
        - Key: Name
          Value: NAT Gateway Public Subnet 1

# Create a NAT Gateway 2 in Public Subnet 2
  NatGatewayPublicSubnet2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId:
        Fn::ImportValue: !Sub ${EnvironmentName}-PublicSubnet2
      Tags:
        - Key: Name
          Value: NAT Gateway Public Subnet 2

# Create Private Route Table 1
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${EnvironmentName}-VPC
      Tags:
      - Key: Name
        Value: Private Route Table 1

# Add a route to point internet-bound traffic to the NAT Gateway 1
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayPublicSubnet1
      RouteTableId: !Ref PrivateRouteTable1

# Associate Private Subnet 1 with Private Route Table 1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId:
        Fn::ImportValue: !Sub ${EnvironmentName}-PrivateSubnet1

# Associate Private Subnet 3 with Private Route Table 1
  PrivateSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId:
        Fn::ImportValue: !Sub ${EnvironmentName}-PrivateSubnet3


# Create Private Route Table 2
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Fn::ImportValue: !Sub ${EnvironmentName}-VPC
      Tags:
      - Key: Name
        Value: Private Route Table 2

# Add a route to point internet-bound traffic to the NAT Gateway 2
  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayPublicSubnet2
      RouteTableId: !Ref PrivateRouteTable2

# Associate Private Subnet 2 with Private Route Table 2
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId:
        Fn::ImportValue: !Sub ${EnvironmentName}-PrivateSubnet2

# Associate Private Subnet 4 with Private Route Table 2
  PrivateSubnet4RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId:
        Fn::ImportValue: !Sub ${EnvironmentName}-PrivateSubnet4
